# Lab_Comunicacion_Arduino

Lab_Arduino/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Lab_Arduino/include/: lib_gr6.h
Lab_Arduino/src/: config_tty.cpp  funciones_gr6.cpp  main.cpp
organizar_num/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
organizar_num/archivos_guardar/: lista1.csv
organizar_num/include/: lib1.h  lib_gr6.h
organizar_num/src/: files_ops1.c  funciones.c  main.c
